<resources>
    <string name="app_name">BookCheck</string>
    <string name="title_activity_book">BookActivity</string>
    <string name="login">로그인</string>
    <string name="register">회원가입</string>
    <string name="passward">비밀번호</string>
    <string name="ID">ID</string>
    <string name="Title">제목</string>
    <string name="Author">저자</string>
    <string name="Information">설명</string>
    <string name="Search">제목 입력</string>
    <string name="requestlight">점등 요청</string>
</resources>
