<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="com.stack_test.chekchek.bookcheck.BookinfoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/BookinfoLayout"
        android:layout_weight="0.1">
        <ImageView
            android:layout_width="100sp"
            android:layout_height="160sp"
            android:id="@+id/infopicture"
            android:scrollbars="none"
            android:clickable="false"
            android:focusable="false" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="160sp"
            android:orientation="vertical"
            android:weightSum="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Title"
                android:textSize="24sp"
                android:id="@+id/infoTitle"
                android:gravity="center_vertical"
                android:layout_weight="0.5"
                android:layout_gravity="center_horizontal" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Author"
                android:textSize="16sp"
                android:id="@+id/infoAuthor"
                android:gravity="center_vertical"
                android:layout_weight="0.5"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>
    </LinearLayout>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.8"
        android:text="@string/Information"
        android:textSize="30sp"
        android:id="@+id/infoBook"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:text="@string/requestlight"
        android:textSize="20sp"
        android:id = "@+id/bRequest"
        android:theme="@style/myButton"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"/>

</LinearLayout>
