<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.stack_test.chekchek.bookcheck.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_LoginID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ID"
            android:singleLine="true"
            android:lines="1"
            android:imeOptions="actionUnspecified"/>

    </android.support.design.widget.TextInputLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_LoginPW"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
            android:layout_marginTop="4dp">
            <EditText
                android:id="@+id/etPW"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/passward"
                android:singleLine="true"
                android:lines="1"/>
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>


    <Button
    android:id="@+id/bLogin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/login"
    android:textSize="20sp"
        android:textColor="@color/White"
        android:background="@color/morePurple"
        android:theme="@style/myButton"

    android:layout_marginTop="80dp"
    android:layout_gravity="center_horizontal" />


    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200sp"
        android:text="@string/register"
        android:textColor="@color/colorAccent"

        android:textColorHighlight="@color/colorPrimary"
        android:textSize="20sp" />


</LinearLayout>
